src/tests/fail/timed_handler_closure_capture_too_short.stderr
error[E0597]: `val` does not live long enough
  --> $DIR/timed_handler_closure_capture_too_short.rs:9:4
   |
8  |         conn.timed_handler_add(|_, _| {
   |                                ------ value captured here
9  |             val = 1;
   |             ^^^ borrowed value does not live long enough
...
12 |         conn
   |         ---- a temporary with access to the borrow is created here ...
13 |     };
   |     -- ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `Connection`
   |     |
   |     `val` dropped here while still borrowed
   |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
   |
12 |         conn;
   |             ^
